--- a/src/components/Yuna.astro
+++ b/src/components/Yuna.astro
@@ -1,13 +1,17 @@
 ---
-import Yuna from "../images/yuna.png";
-import Picture from "./@common/Picture.astro";
-
-const { width, height, class: cssClasses, alt = "" } = Astro.props;
+const { width, height, class: cssClasses, alt = "", ...props } = Astro.props;
 ---
 
-<Picture
-  src={Yuna}
-  alt={alt}
-  class:list={["rounded-t-full", "rounded-b-full", cssClasses]}
-  loading="eager"
-/>
+<picture>
+  <source srcset="/images/raw/yuna.avif" type="image/avif" />
+  <source srcset="/images/raw/yuna.webp" type="image/webp" />
+
+  <img
+    src="/images/raw/yuna.png"
+    decoding="async"
+    loading="eager"
+    class:list={["rounded-t-full", "rounded-b-full", cssClasses]}
+    alt={alt}
+    {...props}
+  />
+</picture>
