--- a/src/components/pages/projets/AllProjects/LargeProject.astro
+++ b/src/components/pages/projets/AllProjects/LargeProject.astro
@@ -35,11 +35,8 @@ const hasManyTestimonials = Array.isArray(project.testimonial);
   <div class="flex flex-col max-lg:space-y-8 lg:flex-row lg:space-x-8">
     <div class="flex flex-col space-y-8 lg:flex-[0_0_40%]">
       <Picture
-        class="rounded-[12px] border border-neutral3"
+        class="w-[200px] h-[80px] rounded-[12px] border border-neutral3"
         src={import(`../../../../images/projets/logos/logo-${project.logo}.png`)}
-        width={200}
-        height={80}
-        densities={[1, 2]}
       />
 
       <div>
