fix contact btn

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -75,7 +75,7 @@ const backgroundFormCSSClasses = showBackgroundForm
             type="secondary"
             textToCopy="hello@team-ux.com"
             toastCopySuccessText="Notre adresse e-mail a été copiée dans votre presse-papiers !"
-            class="max-lg:hidden lg:mt-10"
+            class="max-lg:!hidden lg:mt-10"
           >
             Copier notre adresse email dans votre presse-papiers
           </ButtonCopyText>
