--- a/src/components/pages/projets/AllProjects/index.astro
+++ b/src/components/pages/projets/AllProjects/index.astro
@@ -5,6 +5,10 @@ import Grid from "../../../../components/@common/Grid.astro";
 import CallToAction from "../../../@common/CallToAction.astro";
 import LargeProject from "./LargeProject.astro";
 import SmallProject from "./SmallProject.astro";
+
+const allProjectsImages = await Astro.glob(
+  `../../../../images/projets/screenshots/*`,
+);
 ---
 
 <section class="container">
@@ -35,7 +39,10 @@ import SmallProject from "./SmallProject.astro";
                   {projectsGroup.projects.map((project) => {
                     return (
                       <li>
-                        <LargeProject project={project} />
+                        <LargeProject
+                          project={project}
+                          allProjectsImages={allProjectsImages}
+                        />
                       </li>
                     );
                   })}
