trailing slash in redirections

--- a/src/components/pages/projets/AllProjects/index.astro
+++ b/src/components/pages/projets/AllProjects/index.astro
@@ -1,4 +1,5 @@
 ---
+import "./index";
 import data from "../../../../data/projets/all-projects.yaml";
 import Brush from "../../../../components/@common/Brush.astro";
 import Grid from "../../../../components/@common/Grid.astro";
