fix brush 2 profiles

--- a/src/components/pages/nos-deux-profils/ItsAMatch.astro
+++ b/src/components/pages/nos-deux-profils/ItsAMatch.astro
@@ -29,6 +29,8 @@ import TeamUXStamp from "../../TeamUXStamp.astro";
         </p>
 
         <CallToAction
+          href="https://www.linkedin.com/company/team-ux/"
+          target="_blank"
           type="secondary"
           rightIcon="open_in_new"
           class="col-span-full mx-auto mb-20"
@@ -53,7 +55,7 @@ import TeamUXStamp from "../../TeamUXStamp.astro";
                 />
                 <Icon name="softskill-details" />
                 <span class="text-label-medium lg:text-label-large"
-                  >Sens du travail</span
+                  >Sens du détail</span
                 >
               </li>
               <li>
