--- a/src/components/pages/nos-deux-profils/Profiles.astro
+++ b/src/components/pages/nos-deux-profils/Profiles.astro
@@ -17,7 +17,7 @@ import Profile from "./Profile.astro";
         <div slot="picture" class="relative isolate lg:w-[142px]">
           <Brush
             id={1}
-            class="absolute z-[-1] w-[129px] lg:w-[142px] left-[13px] bottom-0 rotate-[180deg]"
+            class="absolute z-[-1] w-[129px] lg:w-[142px] left-0 bottom-0 rotate-[180deg]"
           />
           <Yuna
             class="w-[82px] h-[204px] lg:w-[89px] lg:h-[220px] max-lg:ml-[24px] lg:mx-auto"
@@ -31,7 +31,7 @@ import Profile from "./Profile.astro";
         <div slot="picture" class="relative isolate lg:w-[164px]">
           <Brush
             id={2}
-            class="absolute z-[-1] w-[129px] lg:w-[164px] left-[10px] bottom-[11px] rotate-[90deg]"
+            class="absolute z-[-1] w-[150px] lg:w-[164px] -left-[10px] lg:left-0 bottom-[11px] rotate-[90deg]"
           />
           <Daniela
             class="w-[82px] h-[204px] lg:w-[89px] lg:h-[220px] max-lg:ml-[24px] mx-auto"
