--- a/src/components/Header/NavItems.astro
+++ b/src/components/Header/NavItems.astro
@@ -1,6 +1,6 @@
 ---
-import { slugify } from "../../scripts/helpers/slugify";
-import Icon from "../@common/Icon.astro";
+import { slugify } from "scripts/helpers/slugify";
+import Icon from "components/@common/Icon.astro";
 import NavItem from "./NavItem.astro";
 
 interface Props {
