--- a/src/components/Header/index.astro
+++ b/src/components/Header/index.astro
@@ -1,6 +1,6 @@
 ---
-import Icon from "../@common/Icon.astro";
-import Grid from "../@common/Grid.astro";
+import Icon from "components/@common/Icon.astro";
+import Grid from "components/@common/Grid.astro";
 import Logo from "./Logo.astro";
 import NavItemContact from "./NavItemContact.astro";
 import NavItem from "./NavItem.astro";
