--- a/src/components/TeamUXStamp.astro
+++ b/src/components/TeamUXStamp.astro
@@ -1,6 +1,6 @@
 ---
 import Picture from "./@common/Picture.astro";
-import Stamp from "../images/stamp-team-ux.png";
+import Stamp from "images/stamp-team-ux.png";
 ---
 
 <Picture src={Stamp} width={200} height={200} />
