--- a/src/components/pages/homepage/DerriereTeamUX/index.astro
+++ b/src/components/pages/homepage/DerriereTeamUX/index.astro
@@ -1,21 +1,21 @@
 ---
-import Brush from "../../../@common/Brush.astro";
-import Picture from "../../../@common/Picture.astro";
-import Grid from "../../../@common/Grid.astro";
-import Icon from "../../../@common/Icon.astro";
-import CallToAction from "../../../@common/CallToAction.astro";
-import DuoDeChoc from "../../../../components/DuoDeChoc.astro";
-import data from "../../../../data/homepage/derriere-team-ux.yaml";
+import Brush from "components/@common/Brush.astro";
+import Picture from "components/@common/Picture.astro";
+import Grid from "components/@common/Grid.astro";
+import Icon from "components/@common/Icon.astro";
+import CallToAction from "components/@common/CallToAction.astro";
+import DuoDeChoc from "components/DuoDeChoc.astro";
+import data from "data/homepage/derriere-team-ux.yaml";
 
-import Certif_Access42 from "../../../../images/certifications/access42.png";
-import Certif_IDF from "../../../../images/certifications/idf.png";
-import Certif_W3C from "../../../../images/certifications/w3c.png";
-import Certif_Opquast from "../../../../images/certifications/opquast.png";
-import Certif_Uxer from "../../../../images/certifications/uxer.png";
-import Certif_Shifta from "../../../../images/certifications/shifta.png";
-import Certif_INR from "../../../../images/certifications/inr.png";
-import Commit_DesignEthico from "../../../../images/certifications/diseno-etico.png";
-import Commit_DesignEthique from "../../../../images/certifications/designers-ethiques.png";
+import Certif_Access42 from "images/certifications/access42.png";
+import Certif_IDF from "images/certifications/idf.png";
+import Certif_W3C from "images/certifications/w3c.png";
+import Certif_Opquast from "images/certifications/opquast.png";
+import Certif_Uxer from "images/certifications/uxer.png";
+import Certif_Shifta from "images/certifications/shifta.png";
+import Certif_INR from "images/certifications/inr.png";
+import Commit_DesignEthico from "images/certifications/diseno-etico.png";
+import Commit_DesignEthique from "images/certifications/designers-ethiques.png";
 
 const { block1, block2 } = data;
 ---
