--- a/src/components/pages/homepage/Expertises/index.astro
+++ b/src/components/pages/homepage/Expertises/index.astro
@@ -1,8 +1,8 @@
 ---
-import Grid from "../../../@common/Grid.astro";
-import Brush from "../../../@common/Brush.astro";
-import data from "../../../../data/homepage/expertises.yaml";
-import BackgroundForm1 from "../../../BackgroundForm1.astro";
+import data from "data/homepage/expertises.yaml";
+import Grid from "components/@common/Grid.astro";
+import Brush from "components/@common/Brush.astro";
+import BackgroundForm1 from "components/BackgroundForm1.astro";
 import Expertise from "./Expertise.astro";
 ---
 
