--- a/src/components/pages/homepage/Hero.astro
+++ b/src/components/pages/homepage/Hero.astro
@@ -1,8 +1,8 @@
 ---
-import Grid from "../../@common/Grid.astro";
-import CallToAction from "../../@common/CallToAction.astro";
-import BackgroundForm1 from "../../BackgroundForm1.astro";
-import DuoDeChoc from "../../DuoDeChoc.astro";
+import Grid from "components/@common/Grid.astro";
+import CallToAction from "components/@common/CallToAction.astro";
+import BackgroundForm1 from "components/BackgroundForm1.astro";
+import DuoDeChoc from "components/DuoDeChoc.astro";
 ---
 
 <section
