--- a/src/components/pages/mentions-legales/Content.astro
+++ b/src/components/pages/mentions-legales/Content.astro
@@ -1,6 +1,6 @@
 ---
-import data from "../../../data/mentions-legales/data.yaml";
-import Grid from "../../@common/Grid.astro";
+import data from "data/mentions-legales/data.yaml";
+import Grid from "components/@common/Grid.astro";
 import Section from "./Section.astro";
 import Block from "./Block.astro";
 
