--- a/src/components/pages/nos-deux-profils/Profile.astro
+++ b/src/components/pages/nos-deux-profils/Profile.astro
@@ -1,6 +1,6 @@
 ---
-import Tag from "../../@common/Tag.astro";
-import CallToAction from "../../@common/CallToAction.astro";
+import Tag from "components/@common/Tag.astro";
+import CallToAction from "components/@common/CallToAction.astro";
 
 interface Props {
   profile: {
