--- a/src/components/pages/nos-deux-profils/Profiles.astro
+++ b/src/components/pages/nos-deux-profils/Profiles.astro
@@ -1,10 +1,10 @@
 ---
-import dataYuna from "../../../data/nos-deux-profils/yuna.yaml";
-import dataDaniela from "../../../data/nos-deux-profils/daniela.yaml";
-import Grid from "../../@common/Grid.astro";
-import Brush from "../../@common/Brush.astro";
-import Yuna from "../../Yuna.astro";
-import Daniela from "../../Daniela.astro";
+import dataYuna from "data/nos-deux-profils/yuna.yaml";
+import dataDaniela from "data/nos-deux-profils/daniela.yaml";
+import Grid from "components/@common/Grid.astro";
+import Brush from "components/@common/Brush.astro";
+import Yuna from "components/Yuna.astro";
+import Daniela from "components/Daniela.astro";
 import Profile from "./Profile.astro";
 ---
 
