--- a/src/components/pages/notre-manifeste/Actions.astro
+++ b/src/components/pages/notre-manifeste/Actions.astro
@@ -1,6 +1,6 @@
 ---
-import data from "../../../data/notre-manifeste/actions.yaml";
-import Grid from "../../@common/Grid.astro";
+import data from "data/notre-manifeste/actions.yaml";
+import Grid from "components/@common/Grid.astro";
 ---
 
 <section class="container">
