--- a/src/components/pages/notre-manifeste/Hero.astro
+++ b/src/components/pages/notre-manifeste/Hero.astro
@@ -1,6 +1,6 @@
 ---
-import CommonPageHero from "../../../components/CommonPageHero.astro";
-import data from "../../../data/notre-manifeste/hero.yaml";
+import CommonPageHero from "components/CommonPageHero.astro";
+import data from "data/notre-manifeste/hero.yaml";
 ---
 
 <div>
