--- a/src/components/pages/notre-manifeste/Introduction.astro
+++ b/src/components/pages/notre-manifeste/Introduction.astro
@@ -1,8 +1,8 @@
 ---
-import Grid from "../../@common/Grid.astro";
-import data from "../../../data/notre-manifeste/introduction.yaml";
-import Brush from "../../@common/Brush.astro";
-import BackgroundForm1 from "../../BackgroundForm1.astro";
+import Grid from "components/@common/Grid.astro";
+import data from "data/notre-manifeste/introduction.yaml";
+import Brush from "components/@common/Brush.astro";
+import BackgroundForm1 from "components/BackgroundForm1.astro";
 ---
 
 <section
