--- a/src/components/pages/notre-manifeste/Signatures.astro
+++ b/src/components/pages/notre-manifeste/Signatures.astro
@@ -1,9 +1,9 @@
 ---
-import Picture from "../../@common/Picture.astro";
-import TeamUXStamp from "../../TeamUXStamp.astro";
+import Picture from "components/@common/Picture.astro";
+import TeamUXStamp from "components/TeamUXStamp.astro";
 
-import SignatureYuna from "../../../images/signature-yuna.png";
-import SignatureDaniela from "../../../images/signature-daniela.png";
+import SignatureYuna from "images/signature-yuna.png";
+import SignatureDaniela from "images/signature-daniela.png";
 ---
 
 <section class="container">
