--- a/src/components/pages/plan-du-site/Content.astro
+++ b/src/components/pages/plan-du-site/Content.astro
@@ -1,6 +1,6 @@
 ---
-import Grid from "../../@common/Grid.astro";
-import CallToAction from "../../@common/CallToAction.astro";
+import Grid from "components/@common/Grid.astro";
+import CallToAction from "components/@common/CallToAction.astro";
 ---
 
 <section class="container">
