--- a/src/components/pages/plan-du-site/Hero.astro
+++ b/src/components/pages/plan-du-site/Hero.astro
@@ -1,5 +1,5 @@
 ---
-import CommonPageHero from "../../CommonPageHero.astro";
+import CommonPageHero from "components/CommonPageHero.astro";
 ---
 
 <CommonPageHero title="Plan du site" showBackgroundForm={false} />
