--- a/src/components/pages/projets/AllProjects/LargeProject.astro
+++ b/src/components/pages/projets/AllProjects/LargeProject.astro
@@ -1,13 +1,13 @@
 ---
 import { AstroGlobalPartial } from "astro";
 import { getImage } from "astro:assets";
-import CallToAction from "../../../../components/@common/CallToAction.astro";
+import CallToAction from "components/@common/CallToAction.astro";
 import Testimonial, {
   type Testimonial,
-} from "../../../../components/Testimonial.astro";
-import Icon from "../../../../components/@common/Icon.astro";
-import Tag from "../../../@common/Tag.astro";
-import Picture from "../../../@common/Picture.astro";
+} from "components/Testimonial.astro";
+import Icon from "components/@common/Icon.astro";
+import Tag from "components/@common/Tag.astro";
+import Picture from "components/@common/Picture.astro";
 
 export type LargeProjectImage = {
   name: string;
