--- a/src/components/pages/projets/AllProjects/index.astro
+++ b/src/components/pages/projets/AllProjects/index.astro
@@ -1,8 +1,8 @@
 ---
-import data from "../../../../data/projets/all-projects.yaml";
-import Brush from "../../../../components/@common/Brush.astro";
-import Grid from "../../../../components/@common/Grid.astro";
-import CallToAction from "../../../@common/CallToAction.astro";
+import data from "data/projets/all-projects.yaml";
+import Brush from "components/@common/Brush.astro";
+import Grid from "components/@common/Grid.astro";
+import CallToAction from "components/@common/CallToAction.astro";
 import LargeProject from "./LargeProject.astro";
 import SmallProject from "./SmallProject.astro";
 
