--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,9 +1,9 @@
 ---
-import "../styles/base.css";
+import "styles/base.css";
 
 import { Sprite } from "astro-icon";
-import Header from "../components/Header/index.astro";
-import Toast from "../components/Toast.astro";
+import Header from "components/Header/index.astro";
+import Toast from "components/Toast.astro";
 
 interface Props {
   title: string;
