--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,9 +1,9 @@
 ---
-import CommonPageHero from "../components/CommonPageHero.astro";
-import Layout from "../layouts/Layout.astro";
-import Contact from "../components/Contact.astro";
-import Footer from "../components/Footer.astro";
-import Breadcrumb from "../components/Breadcrumb.astro";
+import CommonPageHero from "components/CommonPageHero.astro";
+import Layout from "layouts/Layout.astro";
+import Contact from "components/Contact.astro";
+import Footer from "components/Footer.astro";
+import Breadcrumb from "components/Breadcrumb.astro";
 ---
 
 <Layout
