--- a/src/pages/glossaire-ux-design/index.astro
+++ b/src/pages/glossaire-ux-design/index.astro
@@ -1,11 +1,11 @@
 ---
-import Layout from "../../layouts/Layout.astro";
-import Breadcrumb from "../../components/Breadcrumb.astro";
-import Contact from "../../components/Contact.astro";
-import Footer from "../../components/Footer.astro";
-import Hero from "../../components/pages/glossaire-ux-design/Hero.astro";
-import Glossaire from "../../components/pages/glossaire-ux-design/Glossaire.astro";
-import ScrollToTop from "../../components/ScrollToTop/index.astro";
+import Layout from "layouts/Layout.astro";
+import Breadcrumb from "components/Breadcrumb.astro";
+import Contact from "components/Contact.astro";
+import Footer from "components/Footer.astro";
+import Hero from "components/pages/glossaire-ux-design/Hero.astro";
+import Glossaire from "components/pages/glossaire-ux-design/Glossaire.astro";
+import ScrollToTop from "components/ScrollToTop/index.astro";
 ---
 
 <Layout
