--- a/src/pages/mentions-legales/index.astro
+++ b/src/pages/mentions-legales/index.astro
@@ -1,10 +1,10 @@
 ---
-import Layout from "../../layouts/Layout.astro";
-import Breadcrumb from "../../components/Breadcrumb.astro";
-import Contact from "../../components/Contact.astro";
-import Footer from "../../components/Footer.astro";
-import Hero from "../../components/pages/mentions-legales/Hero.astro";
-import Content from "../../components/pages/mentions-legales/Content.astro";
+import Layout from "layouts/Layout.astro";
+import Breadcrumb from "components/Breadcrumb.astro";
+import Contact from "components/Contact.astro";
+import Footer from "components/Footer.astro";
+import Hero from "components/pages/mentions-legales/Hero.astro";
+import Content from "components/pages/mentions-legales/Content.astro";
 ---
 
 <Layout
