--- a/src/components/ButtonCopyText/index.astro
+++ b/src/components/ButtonCopyText/index.astro
@@ -1,5 +1,5 @@
 ---
-import CallToAction from "../@common/CallToAction.astro";
+import CallToAction from "components/@common/CallToAction.astro";
 
 interface Props {
   label: string;
