--- a/src/components/pages/demarche-eco-conception/Content.astro
+++ b/src/components/pages/demarche-eco-conception/Content.astro
@@ -1,6 +1,6 @@
 ---
-import data from "../../../data/demarche-eco-conception/data.yaml";
-import Grid from "../../@common/Grid.astro";
+import data from "data/demarche-eco-conception/data.yaml";
+import Grid from "components/@common/Grid.astro";
 import Section from "./Section.astro";
 import Block from "./Block.astro";
 ---
