--- a/src/components/pages/notre-manifeste/Convictions.astro
+++ b/src/components/pages/notre-manifeste/Convictions.astro
@@ -1,7 +1,7 @@
 ---
-import data from "../../../data/notre-manifeste/convictions.yaml";
-import Grid from "../../@common/Grid.astro";
-import Brush from "../../@common/Brush.astro";
+import data from "data/notre-manifeste/convictions.yaml";
+import Grid from "components/@common/Grid.astro";
+import Brush from "components/@common/Brush.astro";
 ---
 
 <section class="container">
