--- a/src/components/pages/projets/AllProjects/SmallProject.astro
+++ b/src/components/pages/projets/AllProjects/SmallProject.astro
@@ -1,6 +1,6 @@
 ---
-import Tag from "../../../@common/Tag.astro";
-import Picture from "../../../@common/Picture.astro";
+import Tag from "components/@common/Tag.astro";
+import Picture from "components/@common/Picture.astro";
 
 interface Props {
   projects: {
