--- a/src/pages/nos-deux-profils/index.astro
+++ b/src/pages/nos-deux-profils/index.astro
@@ -1,11 +1,11 @@
 ---
-import Layout from "../../layouts/Layout.astro";
-import Footer from "../../components/Footer.astro";
-import Breadcrumb from "../../components/Breadcrumb.astro";
-import Contact from "../../components/Contact.astro";
-import Hero from "../../components/pages/nos-deux-profils/Hero.astro";
-import Profiles from "../../components/pages/nos-deux-profils/Profiles.astro";
-import ItsAMatch from "../../components/pages/nos-deux-profils/ItsAMatch.astro";
+import Layout from "layouts/Layout.astro";
+import Footer from "components/Footer.astro";
+import Breadcrumb from "components/Breadcrumb.astro";
+import Contact from "components/Contact.astro";
+import Hero from "components/pages/nos-deux-profils/Hero.astro";
+import Profiles from "components/pages/nos-deux-profils/Profiles.astro";
+import ItsAMatch from "components/pages/nos-deux-profils/ItsAMatch.astro";
 ---
 
 <Layout
