--- a/src/pages/notre-manifeste/index.astro
+++ b/src/pages/notre-manifeste/index.astro
@@ -1,13 +1,13 @@
 ---
-import Layout from "../../layouts/Layout.astro";
-import Breadcrumb from "../../components/Breadcrumb.astro";
-import Contact from "../../components/Contact.astro";
-import Footer from "../../components/Footer.astro";
-import Hero from "../../components/pages/notre-manifeste/Hero.astro";
-import Introduction from "../../components/pages/notre-manifeste/Introduction.astro";
-import Convictions from "../../components/pages/notre-manifeste/Convictions.astro";
-import Actions from "../../components/pages/notre-manifeste/Actions.astro";
-import Signatures from "../../components/pages/notre-manifeste/Signatures.astro";
+import Layout from "layouts/Layout.astro";
+import Breadcrumb from "components/Breadcrumb.astro";
+import Contact from "components/Contact.astro";
+import Footer from "components/Footer.astro";
+import Hero from "components/pages/notre-manifeste/Hero.astro";
+import Introduction from "components/pages/notre-manifeste/Introduction.astro";
+import Convictions from "components/pages/notre-manifeste/Convictions.astro";
+import Actions from "components/pages/notre-manifeste/Actions.astro";
+import Signatures from "components/pages/notre-manifeste/Signatures.astro";
 ---
 
 <Layout
