--- a/src/pages/projets/index.astro
+++ b/src/pages/projets/index.astro
@@ -1,11 +1,11 @@
 ---
-import Layout from "../../layouts/Layout.astro";
-import Breadcrumb from "../../components/Breadcrumb.astro";
-import Contact from "../../components/Contact.astro";
-import AllProjects from "../../components/pages/projets/AllProjects/index.astro";
-import Hero from "../../components/pages/projets/Hero.astro";
-import Footer from "../../components/Footer.astro";
-import ScrollToTop from "../../components/ScrollToTop/index.astro";
+import Layout from "layouts/Layout.astro";
+import Breadcrumb from "components/Breadcrumb.astro";
+import Contact from "components/Contact.astro";
+import AllProjects from "components/pages/projets/AllProjects/index.astro";
+import Hero from "components/pages/projets/Hero.astro";
+import Footer from "components/Footer.astro";
+import ScrollToTop from "components/ScrollToTop/index.astro";
 ---
 
 <Layout
