--- a/src/pages/temoignages/index.astro
+++ b/src/pages/temoignages/index.astro
@@ -1,10 +1,10 @@
 ---
-import Footer from "../../components/Footer.astro";
-import Breadcrumb from "../../components/Breadcrumb.astro";
-import Contact from "../../components/Contact.astro";
-import Hero from "../../components/pages/temoignages/Hero.astro";
-import Testimonials from "../../components/pages/temoignages/Testimonials.astro";
-import Layout from "../../layouts/Layout.astro";
+import Footer from "components/Footer.astro";
+import Breadcrumb from "components/Breadcrumb.astro";
+import Contact from "components/Contact.astro";
+import Hero from "components/pages/temoignages/Hero.astro";
+import Testimonials from "components/pages/temoignages/Testimonials.astro";
+import Layout from "layouts/Layout.astro";
 ---
 
 <Layout
