nested list style

--- a/src/components/pages/demarche-eco-conception/Content.astro
+++ b/src/components/pages/demarche-eco-conception/Content.astro
@@ -176,7 +176,7 @@ import Block from "./Block.astro";
   .demarche-eco-conception {
     & :global(ul) {
       & :global(ul) {
-        list-style-type: "- ";
+        list-style: circle;
         margin-left: 30px;
       }
     }
