--- a/src/components/DuoDeChoc.astro
+++ b/src/components/DuoDeChoc.astro
@@ -14,7 +14,7 @@ const { variant, ...props } = Astro.props;
     <div class="isolate relative">
       <Brush
         id={1}
-        class="absolute z-0 top-0 left-0 w-[210px] h-[249px] rotate-[-90deg] translate-x-[20px] translate-y-[-20px]"
+        class="absolute z-0 top-0 left-0 w-[210px] h-[249px] rotate-[-90deg] translate-x-[20px] translate-y-[-20px] aspect-[331/393]"
       />
       <div class="flex justify-center space-x-3">
         <PictureYuna class="relative z-10 w-[85px] h-[210px] aspect-[13/32]" />
@@ -29,7 +29,7 @@ const { variant, ...props } = Astro.props;
     <div class="relative isolate">
       <Brush
         id={1}
-        class="absolute z-0 top-[-30px] left-0 w-[352] h-[418] rotate-[-165.467deg] translate-x-[-10px]"
+        class="absolute z-0 top-[-30px] left-0 w-[352] h-[418] rotate-[-165.467deg] translate-x-[-10px] aspect-[70/83]"
         loading="eager"
       />
 
