--- a/src/components/DuoDeChoc.astro
+++ b/src/components/DuoDeChoc.astro
@@ -29,7 +29,7 @@ const { variant, ...props } = Astro.props;
     <div class="relative isolate">
       <Brush
         id={1}
-        class="absolute z-0 top-[-30px] left-0 w-[352] h-[418] rotate-[-165.467deg] translate-x-[-10px] aspect-[70/83]"
+        class="absolute z-0 top-[-30px] left-0 w-[352px] h-[418px] rotate-[-165.467deg] translate-x-[-10px] aspect-[70/83]"
         loading="eager"
       />
 
