no header animations

--- a/src/components/Header/index.astro
+++ b/src/components/Header/index.astro
@@ -207,12 +207,12 @@ import NavItems from "./NavItems.astro";
     }
 
     header:not([data-menu-opened="true"]) {
-      animation-name: mobile-sticky-bg-white-header;
+      //animation-name: mobile-sticky-bg-white-header;
     }
 
     @screen lg {
       header {
-        animation-name: desktop-sticky-bg-white-header;
+        //animation-name: desktop-sticky-bg-white-header;
       }
     }
   }
