--- a/src/components/BackgroundForm1.astro
+++ b/src/components/BackgroundForm1.astro
@@ -1,5 +1,5 @@
 ---
-import { HTMLTag, Polymorphic } from "astro/types";
+import type { HTMLTag, Polymorphic } from "astro/types";
 
 type Props<Tag extends HTMLTag> = Polymorphic<{
   class?: string;
