picture size ffs

--- a/src/components/pages/nos-deux-profils/Profiles.astro
+++ b/src/components/pages/nos-deux-profils/Profiles.astro
@@ -20,7 +20,7 @@ import Profile from "./Profile.astro";
             class="absolute z-[-1] w-[129px] lg:w-[142px] left-0 bottom-0 rotate-[180deg]"
           />
           <Yuna
-            class="w-[82px] h-auto lg:w-[89px] max-lg:ml-[24px] lg:mx-auto"
+            class="w-[82px] h-[202px] lg:w-[89px] lg:h-[219px] max-lg:ml-[24px] mx-auto"
             alt="Portrait de Yuna Orsini"
           />
         </div>
@@ -34,7 +34,7 @@ import Profile from "./Profile.astro";
             class="absolute z-[-1] w-[150px] lg:w-[164px] -left-[10px] lg:left-0 bottom-[11px] rotate-[90deg]"
           />
           <Daniela
-            class="w-[82px] h-auto lg:w-[89px] max-lg:ml-[24px] mx-auto"
+            class="w-[82px] h-[202px] lg:w-[89px] lg:h-[219px] max-lg:ml-[24px] mx-auto"
             alt="Portrait de Daniela Peñaranda"
           />
         </div>
